# Night_Diary

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  eslint.config.js  package-lock.json  package.json  task.md  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
docs/: 本地化桌面端重构方案.md
server/: .env.example  README.md  build.spec  pyproject.toml
server/app/: config.py  main.py
server/tests/: conftest.py  test_config.py  test_health.py
src/: App.vue  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: splash.html
src-tauri/src/: lib.rs  main.rs  process.rs
src/__tests__/: App.spec.ts
src/shared/api/: http.ts
src/shared/composables/: useBackend.ts
src/shared/composables/__tests__/: useBackend.spec.ts
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.vue
web/src/__tests__/: App.spec.ts
