[package]
name = "night-diary"
version = "0.0.1"
description = "Night Diary — local AI diary desktop app"
authors = ["Night Diary"]
edition = "2021"

[lib]
name = "night_diary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["blocking"] }
url = "2"
